fix on mobile/safari

--- a/style.pcss
+++ b/style.pcss
@@ -63,12 +63,12 @@ textarea {
 }
 .btn {
 	appearance: none;
-	display: flex;
-	align-items: center;
+	display: inline-block;
 	background-color: rgba(0,0,0,.5);
 	color: inherit;
 	font: inherit;
 	text-decoration: none;
+	text-align: center;
 	padding: 10px;
 	border: 0;
 	margin: 0;
@@ -122,7 +122,6 @@ textarea {
 	transition: all 300ms;
 
 	& .btn {
-		justify-content: center;
 		font-size: 24px;
 	}
 	& > aside {
@@ -502,7 +501,9 @@ textarea {
 }
 #header {
 	display: flex;
+	justify-content: center;
 	align-items: center;
+	flex-wrap: wrap;
 	flex-shrink: 0;
 	background-color: var(--primary);
 	margin-bottom: 1px;
@@ -517,6 +518,8 @@ textarea {
 	}
 }
 #sidebar {
+	min-width: 300px;
+	max-width: 480px;
 	flex-basis: 33%;
 
 	& > section {
@@ -574,6 +577,7 @@ textarea {
 		& .users {
 			display: flex;
 			flex-direction: column;
+			flex-shrink: 0;
 			padding: 10px;
 			margin: 0;
 
